--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,46 @@
 <div class="jumbotron bg-white text-center">
     <h1 class="display-4">Covid 19 Tracker</h1>
     <hr>
-    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate vero blanditiis esse, dolor cum
-        quasi ratione ipsa! Dicta non quam commodi hic qui similique sapiente! Voluptatibus rerum esse aut vitae.</p>
-    <hr class="my-4">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum et provident architecto, voluptatibus ipsam
-        nihil libero, unde, aut ut nemo pariatur. Deserunt perferendis accusamus, recusandae iusto voluptatibus facilis
-        harum blanditiis.</p>
+    <div class="row">
+        <div class="card col p-3 m-3">
+            <div class="ui statistic">
+                <div class="label">
+                    <h3>Confirmed</h3>
+                </div>
+                <div class="value">
+                    {{totalConfirmed}}
+                </div>
+            </div>
+        </div>
+        <div class="card col p-3 m-3">
+            <div class="ui statistic">
+                <div class="label">
+                    <h3>Recovered</h3>
+                </div>
+                <div class="value">
+                    {{totalRecovered}}
+                </div>
+            </div>
+        </div>
+        <div class="card col p-3 m-3">
+            <div class="ui statistic">
+                <div class="label">
+                    <h3>Deaths</h3>
+                </div>
+                <div class="value">
+                    {{totalDeaths}}
+                </div>
+            </div>
+        </div>
+        <div class="card col p-3 m-3">
+            <div class="ui statistic">
+                <div class="label">
+                    <h3>Active</h3>
+                </div>
+                <div class="value">
+                    {{totalActive}}
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
