--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,3 +4,6 @@
     <app-dashboard-card [totalConfirmed]='totalConfirmed' [totalActive]='totalActive' [totalRecovered]='totalRecovered'
         [totalDeaths]='totalDeaths'></app-dashboard-card>
 </div>
+
+<google-chart [data]="pieChart"></google-chart>
+<google-chart [data]="columnChart"></google-chart>
