--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,5 +5,41 @@
         [totalDeaths]='totalDeaths'></app-dashboard-card>
 </div>
 
-<google-chart [data]="pieChart"></google-chart>
-<google-chart [data]="columnChart"></google-chart>
+<hr>
+
+<div class="ui form">
+    <div class="inline fields">
+        <label for="fruit">Select your favorite fruit:</label>
+        <div class="field">
+            <div class="ui radio checkbox">
+                <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
+                <label>Apples</label>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui radio checkbox">
+                <input type="radio" name="fruit" tabindex="0" class="hidden">
+                <label>Oranges</label>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui radio checkbox">
+                <input type="radio" name="fruit" tabindex="0" class="hidden">
+                <label>Pears</label>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui radio checkbox">
+                <input type="radio" name="fruit" tabindex="0" class="hidden">
+                <label>Grapefruit</label>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <google-chart [data]="columnChart"></google-chart>
+        </div>
+        <div class="col">
+            <google-chart [data]="pieChart"></google-chart>
+        </div>
+    </div>
